--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
   <!-- ===== PRODUCTS SECTION ===== -->
   <section id="products">
-    <h2>Our Products</h2>
+  <h2>Our Products</h2>
 
     <!-- You can duplicate these product blocks to add more -->
     <div class="product">
@@ -42,21 +42,53 @@
 
     <div class="product">
       <img src="download (1).jpg" alt="Product 2">
-      <h3>Pipes</h3>
+      <h3>Rpvc-Pipes</h3>
       <p>Pipes of all sizes availble i.e 20,25,32,40,50,63,75,90,110 MM.<br>
       All fitting accessories availble.<br>
       Available Brand-Kasta,Dutron,Miraj,Ashirvad.
       </p>
     </div>
       <div class="product">
-      <img src="hdpe-sprinkler-pipe.jpg" alt="Product 2">
-      <h3>sprinkler pipe</h3>
+      <img src="hdpe-sprinkler-pipe.jpg" alt="Product 3">
+      <h3>Sprinkler Pipe</h3>
       <p>Pipe size 75MM ,Available Length-1,3,6 Meters.<br>
         All fitting Accessories Available,<br>
       Available Brand-Dutron,Miraj,Jal Varsha,SwarnBhumi.
       </p>
     </div>
+       <div class="product">
+      <img src="hdpe-water-pipe-500x500.webp" alt="Product 4">
+      <h3>HDPE Pipe</h3>
+      <p>Pipe size 20,25,32,40,50,65,80MM.<br>
+      All fitting Accessories Available,<br>
+      Available Brand-Dutron.
+      </p>
+    </div>
+       <div class="product">
+      <img src="download (2).jpg" alt="Product 5">
+      <img src="download (3).jpg" alt="Product 5">
+      <h3>Irrigation Methods</h3>
+      <p>All fitting Accessories Available.<br>
+      Available Brand-Dutron,WellDrip,Idol.
+      </p>
+    </div>
+     <div class="product">
+      <img src="Shriram_Associate_PVC_Pipe_Fittings_1.webp" alt="Product 6">
+      <h3>PVC Fitting</h3>
+      <p>Full range of  fitting Accessories Available.<br>
+      Available Brand-Dutron,WellDrip,Idol.
+      </p>
+    </div>
+     <div class="product">
+      <img src="product-jpeg.jpg" alt="Product 7">
+      <h3>Column Pipes</h3>
+      <p>
+      Available Brand-Ashirvad,Raksha,Falcon.
+      </p>
+    </div>
+   
   </section>
+
 
   <!-- ===== CONTACT SECTION ===== -->
   <section id="contact">
@@ -64,7 +96,7 @@
     <p>📞 Phone: +91 9414858831,7357438831</p>
     <p>📧 Email: sushiljainknr@gmail.com</p>
     <p>📍 Location: sukhanad darwaja, kanera, India</p>
-    <a href="https://maps.google.com" target="_blank" class="map-link">View on Google Maps</a>
+    <a href="https://maps.app.goo.gl/WhYwNRKLmPfNi75J7" target="_blank" class="map-link">View on Google Maps</a>
   </section>
 
   <!-- ===== FOOTER ===== -->
